src/ui/snapshots/cornercase__ui__files__tests__images__an_unreadable_image_says_why.snap
---
source: src/ui/files.rs
expression: "picture(&drawn(&imaged(body, None)))"
---
  ‹  docs/logo.png                           ×
  PNG · 40 bytes             ask agent   copy

  cannot read this image: unexpected end of file
