src/ui/snapshots/cornercase__ui__files__tests__images__draws_the_header_and_the_kitty_placeholders.snap
---
source: src/ui/files.rs
expression: picture(&buffer)
---
  ‹  docs/logo.png                           ×
  PNG · 1280×720 · 245 KB    ask agent   copy

                     ######
                     ######
                     ######
